done adding button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <body>
         Hello my friends
         I love my parents
+        <input type="text" name="" id="">
+        <br>
+        <button>Click me baby</button>
+
     </body>
 </head>
 
